[Shifa Khan] : modified some files for implement the swgger, sonarqube, etc